Fixed button spacing for heroku

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -97,6 +97,10 @@ form {
   margin-bottom: 5.4%;
 }
 
+p.block {
+  height: 130px;
+}
+
 .hero-div {
   margin: 7vh 0 0 0px;
   width: 100%;
@@ -372,7 +376,7 @@ ul.nav.nav-tabs.text-center.not-signed-in {
 }
 
 .btn.spaced {
-  margin: 8% 0 20% 0;
+  margin: 0% 0 5% 0;
 }
 
 .row.text-center.spacer-text {
